fixing comment section on mobile

--- a/Blog.Web/Sass/post.scss
+++ b/Blog.Web/Sass/post.scss
@@ -172,6 +172,7 @@ article {
             .comment-body {
                 margin-left: 10px;
                 flex-grow: 1;
+                flex-basis: 0%;
 
                 &.hide {
                     display: none;
